# beancount-scripts

./: .gitignore  Makefile  README.md  pyproject.toml
src/: connector.py  functions.py  main.py  queries.py
tests/: test_functions.py  test_queries.py
